# sequential-multi-model-cofing-pipeline

./: ARCHITECTURE.md  AUTOMATION.md  CLAUDE.md  DEMO.md  FLOW-DIAGRAM.md  HOW_TO_TEST_LOGIN.md  LICENSE  README.md  automate.sh  linkedin_blog_agentic_code.md  pyproject.toml
agentic_code/: __init__.py  automated_pipeline.py  cli.py  config.py  pipeline.py  utils.py
agentic_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentic_code/agents/: __init__.py  claude.py  codex.py  gemini.py
examples/: api-endpoint.yaml  mobile-app-phase2-completion.md  mobile-app-phase2.md  mobile-app.md  refactoring.json  test-login-workflow.md  url-validation-ai.md  url-validation.md
examples/.claude/: settings.local.json
output/2025-12-15_213841_simple-function/: claude_analysis_response.txt
output/2025-12-16_081132_url-validation-ai/: claude_analysis_response.txt  claude_planning_prompt.md  codex_implementation_prompt.md  task_spec.yaml
output/2025-12-17_221425_simple-function/: claude_analysis_prompt.md
output/2025-12-18_163832_simple-function/: gemini_verification_prompt.md
output/2025-12-23_084923_simple-function/: claude_analysis_response.txt  claude_planning_prompt.md  claude_planning_response.yaml  task_spec.yaml
output/2025-12-23_085101_simple-function/: claude_analysis_response.txt  claude_planning_prompt.md  claude_planning_response.yaml  codex_implementation_prompt.md  task_spec.yaml
scripts/: fully_automated_with_codex.py  hybrid_pipeline.py  truly_automated_pipeline.py
(+86 files in other folders)
